test/src/e2e_vm_tests/test_programs/should_fail/disallow_turbofish/src/main.sw
script;

fn foo() { }

fn main() {
    foo::<u64>();
}
